--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "build": "^0.1.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@vue/cli-service": "^4.5.9",
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
@@ -75,7 +78,7 @@
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-es": "^3.1.3",
+    "uglify-es": "^3.3.9",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
