--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^5.0.5",
     "cross-spawn": "^5.1.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^11.1.3",
@@ -77,6 +77,7 @@
     "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
+    "style-loader": "^2.0.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.3.9",
     "url-loader": "^0.6.2",
